Mobile-View-Update

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         </div>
     </div>
     <div class="gamePage">
-        <div id="returnButton">
-            <img width="50" height="50" src="https://img.icons8.com/ios/50/double-left.png" alt="double-left"/>
+        <div>
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/double-left.png" alt="double-left" id="returnButton"/>
         </div>
         <div id="selectionBar">
             <div id="choosebutton">
