--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Rock_Paper_Scissors_Game</title>
     <link rel="icon" type="image" href="./static/favicon.png">
     <link rel="stylesheet" href="./style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.13.0/gsap.min.js" integrity="sha512-NcZdtrT77bJr4STcmsGAESr06BYGE8woZdSdEgqnpyqac7sugNO+Tr4bGwGF3MsnEkGKhU2KL2xh6Ec+BqsaHA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>   
     <script src="./script.js" defer></script>
 </head>
 <body>
